cmake_minimum_required(VERSION 3.0)
PROJECT(muduo_log)


# AUX_SOURCE_DIRECTORY(./common COMMON_LIST)
AUX_SOURCE_DIRECTORY(./log LOG_LIST)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)

ADD_DEFINITIONS( -g -W -Wall  -Bsymbolic -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++14 )

# INCLUDE_DIRECTORIES(/usr/local/include/hiredis /usr/include/mysql)
INCLUDE_DIRECTORIES(./log)
INCLUDE_DIRECTORIES(./)



#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
ADD_EXECUTABLE(muduo_log ${SRC_LIST}   ${LOG_LIST})

TARGET_LINK_LIBRARIES(muduo_log pthread) 
